--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     },
 	"description": "Wrapper for idanoo/php-resque (Laravel/Lumen ^5.2.0)",
 	"keywords": ["job", "background", "redis", "resque", "php"],
-	"homepage": "https://tinker.nz/idanoo/laravel-resque/",
+	"homepage": "https://gitlab.com/idanoo/laravel-resque/",
 	"license": "MIT",
 	"authors": [
 		{
@@ -17,14 +17,21 @@
     "require": {
         "illuminate/console": "^8.0",
         "illuminate/config": "^8.0",
-        "idanoo/php-resque": "^2.0"
+        "idanoo/php-resque": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+		"phpcompatibility/php-compatibility": "^9.3",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "Idanoo\\Resque\\": "src/"
         }
-    }
+    },
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	}
 }
