--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "replace": {
         "hlgrrnhrdt/laravel-resque": "*"
     },
-    "description": "Wrapper for idanoo/php-resque (Laravel/Lumen ^5.2.0)",
+    "description": "Wrapper for idanoo/php-resque (Laravel/Lumen ^10)",
     "keywords": ["job", "background", "redis", "resque", "php"],
     "homepage": "https://github.com/idanoo/laravel-resque",
     "license": "MIT",
@@ -15,14 +15,13 @@
         }
     ],
     "require": {
-        "illuminate/console": "^8.0",
-        "illuminate/config": "^8.0",
-        "idanoo/php-resque": "^2.1"
+        "php": ">=8.1",
+        "illuminate/console": "^10.0",
+        "illuminate/config": "^10.0",
+        "idanoo/php-resque": "^2.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
-        "phpcompatibility/php-compatibility": "^9.3",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0"
+        "phpunit/phpunit": "^10"
     },
     "autoload": {
         "psr-4": {
@@ -30,12 +29,7 @@
         }
     },
     "support": {
-        "issues": "https://github.com/idanoo/php-resque/issues",
-        "source": "https://github.com/idanoo/php-resque"
-    },
-    "config": {
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        }
+        "issues": "https://github.com/idanoo/laravel-resque/issues",
+        "source": "https://github.com/idanoo/laravel-resque"
     }
 }
